--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -6,12 +6,12 @@
     </button>
   </section>
   <ng-container *ngFor="let employee of employees.Pracownik">
-    <app-employee [employee]="employee" (deleteEmployee)="openDeleteEmployeePopup(employee)"></app-employee>
+    <app-employee [employee]="employee" (deleteEmployee)="openDeactivateEmployeePopup(employee)"></app-employee>
   </ng-container>
   <section class="header">
     <h2 class="main-header">Kierownicy</h2>
   </section>
   <ng-container *ngFor="let employee of employees.Kierownik">
-    <app-employee [employee]="employee" (deleteEmployee)="openDeleteEmployeePopup(employee)"></app-employee>
+    <app-employee [employee]="employee" (deleteEmployee)="openDeactivateEmployeePopup(employee)"></app-employee>
   </ng-container>
 </section>
