--- a/src/app/raport-details/components/week-update/week-update.component.html
+++ b/src/app/raport-details/components/week-update/week-update.component.html
@@ -1,14 +1,23 @@
 <section class="week-update">
-  <h2 mat-dialog-title>Aktualizuj {{ updatingMonth }}: Tydzień {{ updatingWeek.week }}</h2>
+  <h2 mat-dialog-title>{{isEditProjectMode ? 'Edytuj projekt' : 'Dodaj projekt'}}</h2>
   <section mat-dialog-content>
-    <form [formGroup]="updateWeekForm">
+    <mat-form-field appearance="fill">
+      <mat-label>Projekt</mat-label>
+      <mat-select [(value)]="selected" required>
+        <mat-option *ngFor="let project of projects" [value]="project.name">{{project.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Godziny</mat-label>
+      <input [formControl]="hours" name="hours" matInput placeholder="hours">
+    </mat-form-field>
+    <!-- <form [formGroup]="updateWeekForm">
       <div formArrayName="projects" *ngFor="let project of updateWeekForm.get('projects').controls; let i = index">
         <div class="project" [formGroupName]="i">
           <mat-form-field appearance="fill">
             <mat-label>Projekt</mat-label>
-            <mat-select matNativeControl required formControlName="name">
-              <mat-option value="Pracownik">Pracownik</mat-option>
-              <mat-option value="Kierownik">Kierownik</mat-option>
+            <mat-select matNativeControl required formControlName="name" placeholder="this.updateWeekForm.get('projects').value[i].name">
+              <mat-option *ngFor="let project of projects" value="project.name">{{project.name}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field appearance="fill">
@@ -18,12 +27,11 @@
           <button mat-stroked-button color="warn">USUŃ</button>
         </div>
       </div>
-    </form>
+    </form> -->
   </section>
-  <button mat-stroked-button color="primary" (click)="addProject()">DODAJ PROJEKT</button>
 
   <mat-dialog-actions align="end">
     <button mat-stroked-button color="primary" (click)="abortUpdate.emit()">ANULUJ</button>
-    <button mat-flat-button color="primary" (click)="updateWeek()">AKTUALIZUJ</button>
+    <button mat-flat-button color="primary" (click)="updateWeek()">{{isEditProjectMode ? 'EDYTUJ' : 'DODAJ'}}</button>
   </mat-dialog-actions>
 </section>
